metallb/mysql_endpoint.yml
apiVersion: v1
kind: Endpoints
metadata:
  name: mysql-service
subsets:
  - addresses:
      - ip: 192.168.56.1
    ports:
      - port: 3306
