metallb/ingress.yml
# An Ingress with 2 hosts and 3 endpoints
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: helloworld-rules
  annotations:
    kubernetes.io/ingress.class: "nginx"
    ingress.kubernetes.io/rewrite-target: /
    kubernetes.io/ssl-redirect: "false"
spec:
  #To specify a default backend, uncomment the following lines:
  #defaultBackend:
  #  service:
  #    name: echoheaders-default 
  #    port:
  #      number: 80
  rules:
  - host: helloworld-v1.example.com
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: helloworld-v1
            port:
              number: 80
  - host: helloworld-v2.example.com
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: helloworld-v2
            port:
              number: 80
              
      - path: /currency-exchange/
        pathType: Prefix
        backend:
          service:
            name: currency-exchange
            port: 
              number: 8000
            
      - path: /currency-conversion/
        pathType: Prefix
        backend:
          service:
            name: currency-conversion
            port: 
              number: 8100
